# energymodel

PowerQuant/: BUILD_SYSTEM.md  README.md  SUBSYSTEMS.md  build.py  pyproject.toml
PowerQuant/Dataset Collection/Dataset-1(works for C++ CUDA Codes)/: README.md
PowerQuant/Dataset Collection/Dataset-2(works for Python PyTorch Models)/: README.md
PowerQuant/Model Training/: .env  README.md  data  main.py  pyproject.toml
PowerQuant/Model Training/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
PowerQuant/Model Training/models/: exp06_quant_catboost_static_20260127_092347.pkl
PowerQuant/Model Training/src/: run_experiments.sh
PowerQuant/Results/: exp02_summary.tex  exp04_summary.tex  exp04_summary_full_20260127_091519.tex  exp04_summary_static_20260127_091519.tex  exp04_summary_static_20260127_092347.tex  exp05_summary.tex  exp05_summary_full_20260127_091519.tex  exp05_summary_static_20260127_091519.tex  exp05_summary_static_20260127_092347.tex  in_distribution_catboost_results.jsonl  in_distribution_neuralnet_results.jsonl
PowerQuant/Results/exp01_catboost/: 0332a8_20251019_101849.json  14f476_20251019_102052.json  237c6d_20251019_102001.json  2a038b_20251019_101838.json  2dab7d_20251019_102012.json  2de259_20251019_101949.json  34a2b8_20251019_101937.json  3789db_20251019_101905.json  3f82f1_20251019_102008.json  4a6fe8_20251019_101827.json  6cc90a_20251019_101941.json  80659a_20251019_101832.json  84d357_20251019_102132.json  9c548f_20251019_101955.json  9efaed_20251019_101857.json  ae1e5b_20251019_101932.json  cb4b89_20251019_102029.json  e0adbe_20251019_102041.json  ef2916_20251019_102126.json  fae784_20251019_101944.json
PowerQuant/Results/exp01_neuralnet/: 177cb0_20251019_121647.json  1e59b7_20251019_113931.json  1fc90f_20251019_121859.json  22db48_20251019_114040.json  2c75fa_20251019_120314.json  2c99ba_20251019_113718.json  39474d_20251019_113202.json  57a2eb_20251019_121116.json  5804d7_20251019_115850.json  7cb6a6_20251019_114756.json  8e1138_20251019_120102.json  95bc9e_20251019_115638.json  966708_20251019_122700.json  96a4a5_20251019_115118.json  9c0a0b_20251019_112526.json  a1faa8_20251019_120836.json  a79e22_20251019_115014.json  ac411c_20251019_122421.json  e7bf86_20251019_114143.json  ed1960_20251019_111957.json
PowerQuant/Results/exp01_quant_catboost/: 0fa698_20251019_085436.json  30f116_20251019_085214.json  3df4b3_20251019_085407.json  5842e3_20251019_085412.json  58bd25_20251019_084857.json  794ee8_20251019_084819.json  8e0463_20251019_085356.json  8ea3c7_20251019_085443.json  919e32_20251019_084906.json  a33ca2_20251019_085422.json  a4f458_20251019_085451.json  (+9 more)
PowerQuant/www/: README.md  app.py  requirements.txt
(+1063 files in other folders)
